FIX: Prevent gradient overlap

--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -21,7 +21,7 @@
     height: 20vw;
     width: 100%;
     background: linear-gradient(180deg, transparent, #15627a 100%);
-    z-index: 999;
+    z-index: 25;
   }
 
   &__contentColumn {
